objects/vlocity_cmt__QuoteAppliedPromotionItem__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AppliedAction__c</fullName>
        <label>Applied Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Apply</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaxQuantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MinQuantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteAppliedPromotionId__c</fullName>
        <label>Quote Applied Promotion</label>
        <referenceTo>vlocity_cmt__QuoteAppliedPromotion__c</referenceTo>
        <relationshipLabel>Quote Applied Promotion Affected Items</relationshipLabel>
        <relationshipName>QuoteAppliedPromotionAffectedItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Applied Promotion Affected Items</relationshipLabel>
        <relationshipName>QuoteAppliedPromotionAffectedItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote Applied Promotion Affected Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Applied Promotion Affected Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>